# Tracer24

./: .gitignore  CMakeLists.txt  README.md  Tracer.cpp  imgui.ini  main.cpp
imgui/: imgui_internal.h  imgui_tables.cpp
include/: App.h  Cell.h  types.h
include/core/: clock.h
include/core/config/: settings.h
include/core/events/: BaseEvent.h  EventDispatcher.h  KeyboardEvent.h
include/core/render/elements/: Box.h  Text.h
include/core/ui/: Cell.h  CellBlock.h  Col.h  Grid.h  Row.h
include/utils/: createShaderProgram.h  fileOps.h  input.h  types.h
src/: App.cpp
src/core/: clock.cpp
src/core/config/: settings.cpp
src/core/events/: BaseEvent.cpp  KeyboardEvent.cpp
src/core/render/elements/: Box.cpp  Text.cpp  vertex_shader.glsl
src/core/ui/: Cell.cpp  CellBlock.cpp  Col.cpp  Grid.cpp  Row.cpp
src/utils/: input.cpp
